routes and fake db added

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,13 +3,13 @@
 		<div class="footer-container__footer-menu">
 			<ul class="footer-menu__menu-list">
 				<li class="menu-list__item">
-					<a href="">Home</a>
+					<a routerLink="/home" routerLinkActive="active">Home</a>
 				</li>
 				<li class="menu-list__item">
-					<a href="">Shop</a>
+					<a routerLink="/shop" routerLinkActive="active">Shop</a>
 				</li>
 				<li class="menu-list__item">
-					<a href=""></a>
+					<a routerLink="/home" routerLinkActive="active">Contact Us</a>
 				</li>
 			</ul>
 		</div>
