service for cart price created

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -9,7 +9,7 @@
 					<a routerLink="/shop" routerLinkActive="active">Shop</a>
 				</li>
 				<li class="menu-list__item">
-					<a routerLink="/home" routerLinkActive="active">Contact Us</a>
+					<a routerLink="/contact" routerLinkActive="active">Contact Us</a>
 				</li>
 			</ul>
 		</div>
