--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,7 +9,7 @@
 					<a routerLink="/shop" routerLinkActive="active" class="menu-panel__link">Shop</a>
 				</li>
 				<li class="menu-panel__list-item">
-					<a routerLink="/home" routerLinkActive="active" class="menu-panel__link">Contact Us</a>
+					<a routerLink="/contact" routerLinkActive="active" class="menu-panel__link">Contact Us</a>
 				</li>
 
 			</ul>
@@ -20,7 +20,7 @@
 					<a routerLink="/sign-in" routerLinkActive="active" class="menu-panel__link">Sign In</a>
 				</li>
 				<li class="menu-panel__list-item">
-					<a href="" class="menu-panel__link">Cart 0.00$</a>
+					<a href="" class="menu-panel__link">Cart {{currentPrice}} $</a>
 				</li>
 			</ul>
 		</div>
