methods for db added

--- a/src/app/sign/registration-page/registration-page.component.html
+++ b/src/app/sign/registration-page/registration-page.component.html
@@ -1,4 +1,7 @@
-<p>
-  registration-page works!
-</p>
+	<form>
+  		<input type="text" name="login">
+  		<input type="password" name="pass">
+  		<input type="password" name="passConfirm">
+  		<button type="submit">Submit</button>
+  	</form>
 <a routerLink="/sign-in" routerLinkActive="active">Back</a>
