--- a/src/app/sign/sign-page/sign-page.component.html
+++ b/src/app/sign/sign-page/sign-page.component.html
@@ -1,4 +1,6 @@
-<p>
-  sign-page works!
-</p>
+	<form>
+  		<input type="text" name="login">
+  		<input type="password" name="pass">
+  		<button type="submit">Submit</button>
+  	</form>
 <a routerLink="/registration" routerLinkActive="active">Reg Page</a>
