nothing changed nothing work

--- a/src/app/shop/search/search.component.html
+++ b/src/app/shop/search/search.component.html
@@ -16,6 +16,7 @@
 	<p>name: {{item.name}}</p>
 	<p>color: {{item.color}}</p>
 	<p>amount: {{item.amount}}</p>
+	<p>price: {{item.price}}</p>
 </div>	
 <!-- [disabled]="loginForm.invalid" -->
 <!-- [value]='item' -->
