--- a/src/app/shop/result/result.component.html
+++ b/src/app/shop/result/result.component.html
@@ -1,10 +1,9 @@
 <div>
-	<div>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	<div *ngFor='let item of resultList'>
+		<p>id: {{item.id}}</p>
+		<p>name: {{item.name}}</p>
+		<p>color: {{item.color}}</p>
+		<p>amount: {{item.amount}}</p>
+		<p>price: {{item.price}}</p>
 	</div>
 </div>
