--- a/src/app/shop/search/search.component.html
+++ b/src/app/shop/search/search.component.html
@@ -11,13 +11,9 @@
 		<!-- <button>Search</button> -->
 	</div>
 </form>
-<div *ngFor='let item of currentResult'>
-	<p>id: {{item.id}}</p>
-	<p>name: {{item.name}}</p>
-	<p>color: {{item.color}}</p>
-	<p>amount: {{item.amount}}</p>
-	<p>price: {{item.price}}</p>
-</div>	
+<router-outlet></router-outlet>
+
+
 <!-- [disabled]="loginForm.invalid" -->
 <!-- [value]='item' -->
 <!-- [hidden]='currentResult' -->
