--- a/src/app/shop/shop-page/shop-page.component.html
+++ b/src/app/shop/shop-page/shop-page.component.html
@@ -1,3 +1,3 @@
-<app-search></app-search>
-<app-result></app-result>
+<!-- <app-search></app-search> -->
+<!-- <app-result></app-result> -->
 <router-outlet></router-outlet>
