few style changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
 <app-header></app-header>
-<p>
-  Some text
-</p>
-<router-outlet></router-outlet>
+<div class="page__container">
+	<router-outlet></router-outlet>
+</div>
 <app-footer></app-footer>
