--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,20 +3,21 @@
 		<div class="footer-container__footer-menu">
 			<ul class="footer-menu__menu-list">
 				<li class="menu-list__item">
-					<a routerLink="/home" routerLinkActive="active">Home</a>
+					<a routerLink="/home" routerLinkActive="active" class="item__link">Home</a>
 				</li>
 				<li class="menu-list__item">
-					<a routerLink="/shop" routerLinkActive="active">Shop</a>
+					<a routerLink="/shop" routerLinkActive="active" class="item__link">Shop</a>
 				</li>
 				<li class="menu-list__item">
-					<a routerLink="/contact" routerLinkActive="active">Contact Us</a>
+					<a routerLink="/contact" routerLinkActive="active" class="item__link">Contact Us</a>
 				</li>
 			</ul>
 		</div>
 		<div class="footer-container__text-part">
-			<p>
-				dev info
+			<p class="text-part__developer">
+				Deved by Aliaksei Shakhoryn<br>
 			</p>
+			<a href="https://github.com/bakeroner" class="text-part__git">GitHub</a>
 		</div>
 	</footer>
 </div>
