--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,13 +14,13 @@
 
 			</ul>
 		</nav>
-		<div>
-			<ul>
-				<li class="menu-panel__list-item">
-					<a routerLink="/sign-in" routerLinkActive="active" class="menu-panel__link">Sign In</a>
+		<div class="navigation-container__profile-panel">
+			<ul class="profile-panel">
+				<li class="profile-panel__list-item">
+					<a routerLink="/sign-in" routerLinkActive="active" class="profile-panel__link">Sign In</a>
 				</li>
-				<li class="menu-panel__list-item">
-					<a href="" class="menu-panel__link">Cart {{currentPrice}} $</a>
+				<li class="profile-panel__list-item">
+					<a href="" class="profile-panel__link">Cart {{currentPrice}} $</a>
 				</li>
 			</ul>
 		</div>
