--- a/src/app/shop/result/result.component.html
+++ b/src/app/shop/result/result.component.html
@@ -1,5 +1,5 @@
 <div>
-	<div *ngFor='let item of resultList'>
+	<div *ngFor='let item of resultList' style="border: 1px solid black;">
 		<p>id: {{item.id}}</p>
 		<p>name: {{item.name}}</p>
 		<p>color: {{item.color}}</p>
