--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+html {
+	max-height: 100%;
+	overflow-x: hidden;
+}
+body {
+    position: relative;
+    margin: 0;
+    min-height: 100vh;
+    height: 100%;
+    width: 100%;
+    overflow-x: hidden;	
+}
