--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,7 @@
 <div class="background__home">
 	<div class="home__home-container">
 		<div class="home-container__text-part">
+			<h1 class="text-part__title">Lorem ipsum dolor?</h1>
 			<p class="text-part__text">
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
