--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -13,7 +13,7 @@
 }
 .footer__footer-container {
 	display: grid;
-	grid-template-columns: 70% 30%;
+	grid-template-columns: 1fr 1fr;
 	grid-template-areas:
 	"menu dev";
 	max-width: 1080px;
@@ -38,13 +38,18 @@
 	text-decoration: none;
 	color: #000;
 	font-size: 20px;
+	font-family: 'Open Sans', sans-serif;
 	-webkit-transition-duration: 0.2s;
     transition-duration: 0.2s;
 }
 .item__link:hover,
 .text-part__git:hover {
-	border-bottom: 2px solid #a2071e;	
+	border-bottom: 4px solid #a2071e;	
 }
 .text-part__developer {
+	font-family: 'Open Sans', sans-serif;
 	font-size: 20px;
+}
+.developer__part {
+	border-bottom: 4px solid #a2071e;	
 }
