--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -5,9 +5,14 @@
 }
 .menu-panel,
 .profile-panel {
+	display: flex;
+	align-items: center;
 	padding-left: 0;
 	margin: 1.5rem 0;
 	margin-top: 2rem;
+}
+.profile-panel {
+	justify-content: flex-end;
 }
 .menu-panel__list-item,
 .profile-panel__list-item {
@@ -18,6 +23,7 @@
 	text-decoration: none;
 	color: #000;
 	font-size: 20px;
+	font-family: 'Open Sans', sans-serif;
 	-webkit-transition-duration: 0.2s;
     transition-duration: 0.2s;
 }
@@ -25,17 +31,18 @@
 	padding-right: 3rem;
 }
 .profile-panel__list-item {
-	padding-left: 1rem;
+	padding-left: 1.5rem;
 }
 .profile-panel__link:hover,
 .menu-panel__link:hover {
-	border-bottom: 2px solid #a2071e;	
+	border-bottom: 4px solid #a2071e;	
 }
 .navigation__navigation-container {
 	display: grid;
-	grid-template-columns: 70% 30%;
+/* 	grid-template-columns: 70% 30%; */
+	grid-template-columns: 1fr 5fr 2fr;
 	grid-template-areas:
-	"menu profile";
+	"home menu profile";
 	max-width: 1080px;
 	margin: 0 auto;
 	width: 100%;
@@ -47,4 +54,27 @@
 .navigation-container__profile-panel {
 	grid-area: profile;
 	text-align: end; 
+}
+.navigation-container__home {
+	margin-top: auto;
+	margin-bottom: auto;
+}
+.list-item__link-icon {
+	margin-top: auto;
+	margin-bottom: auto;
+}
+.home__icon {
+	color: #a2071e;
+	font-size: 45px;
+	grid-area: home;
+}
+.home__icon:hover {
+	color: #000;
+}
+.link-icon__cart {
+	display: inline-block;
+	color: #a2071e;
+	padding-right: 0.2rem;
+	text-align: center;
+	font-size: 20px;
 }
