--- a/src/app/shop/search/search.component.html
+++ b/src/app/shop/search/search.component.html
@@ -1,4 +1,4 @@
-<form novalidate [formGroup]="searchForm" (ngSubmit)="onSubmit(searchForm)">
+<form novalidate [formGroup]="searchForm" (ngSubmit)="onSubmit(searchForm)" style="margin-left: 5vw;">
 	<div>
 		<label for="category">Categories</label><br>
 		<select formControlName="category">
