--- a/src/app/sign/sign-page/sign-page.component.html
+++ b/src/app/sign/sign-page/sign-page.component.html
@@ -1,11 +1,15 @@
-	<form>
-  		<input type="text" name="login">
-  		<input type="password" name="pass">
-  		<button type="submit">Submit</button>
-  	</form>
-  	<div *ngFor='let item of currentResult'>
+	<div class="auth-block">
+		<form class="auth-block__form">
+			<label for="login">Login</label><br>
+  			<input type="text" name="login" class="form__input"><br>
+  			<label for="password">Password</label><br>
+  			<input type="password" name="pass" class="form__input"><br>
+  			<button type="submit" class="form__button">Submit</button>
+  		</form>
+  	</div>
+<!--   	<div *ngFor='let item of currentResult'>
 	<p>id: {{item.id}}</p>
 	<p>login: {{item.login}}</p>
 	<p>password: {{item.password}}</p>
-</div>	
+</div>	 -->
 <a routerLink="/registration" routerLinkActive="active">Reg Page</a>
