--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Montserrat:700');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 html {
 	max-height: 100%;
 	overflow-x: hidden;
@@ -10,4 +13,7 @@ body {
     height: 100%;
     width: 100%;
     overflow-x: hidden;	
+}
+.active {
+	border-bottom: 4px solid #a2071e;
 }
