--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="background__navigation">
+<div class="background__navigation" id="header">
 	<div class="navigation__navigation-container">
 		<a href="/home" class="navigation-container__home">
 			<i class="material-icons home__icon">home</i>
