--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,3 +1,8 @@
+.sticky {
+	position: fixed;
+	width: 100%;
+  	top: 0;
+} 
 .background__navigation {
 	background-color: #fff;
 	border-bottom: 0px solid rgba(0, 0, 0, 0.1);
