--- a/src/app/shop/result/result.component.html
+++ b/src/app/shop/result/result.component.html
@@ -2,8 +2,9 @@
 	<div *ngFor='let item of resultList' style="border: 1px solid black;" class="result-grid__item-block">
 		<p>id: {{item.id}}</p>
 		<p>name: {{item.name}}</p>
-		<p>color: {{item.color}}</p>
+ 		<p>color: {{item.color}}</p>
 		<p>amount: {{item.amount}}</p>
 		<p>price: {{item.price}}</p>
+		<i class="material-icons item-block__cart-add">add</i>
 	</div>
 </div>
