--- a/src/app/shop/result/result.component.scss
+++ b/src/app/shop/result/result.component.scss
@@ -1,8 +1,11 @@
 .result-grid {
 	margin-left: 5vw;
 	display: grid;
-	grid-template-columns: repeat(3, 1fr);
+	/* grid-template-columns: repeat(3, 1fr); */
 	/* grid-template-columns: repeat(auto-fit, minmax(100px, 1fr)); */
 	grid-auto-flow: row-dense;
 	grid-gap: 30px 30px;
+}
+.item-block__cart-add {
+	color: #a2071e;
 }
