detail component added

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,13 +3,13 @@
 		<div class="footer-container__footer-menu">
 			<ul class="footer-menu__menu-list">
 				<li class="menu-list__item">
-					<a routerLink="/home" routerLinkActive="active" class="item__link">Home</a>
+					<a routerLink="/home" class="item__link">Home</a>
 				</li>
 				<li class="menu-list__item">
-					<a routerLink="/shop" routerLinkActive="active" class="item__link">Shop</a>
+					<a routerLink="/shop" class="item__link">Shop</a>
 				</li>
 				<li class="menu-list__item">
-					<a routerLink="/contact" routerLinkActive="active" class="item__link">Contact Us</a>
+					<a routerLink="/contact" class="item__link">Contact Us</a>
 				</li>
 			</ul>
 		</div>
