--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -6,6 +6,7 @@
     background-color: #f1f1f1;
     padding-top: 1.5rem;
     padding-bottom: 2rem;
+    z-index: 1;
 }
 .footer-menu__menu-list {
 	padding-left: 0;
