--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,4 @@
+<div id="fakeDiv"></div>
 <div class="background__navigation" id="header">
 	<div class="navigation__navigation-container">
 		<a href="/home" class="navigation-container__home">
