--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,6 +3,7 @@
 	margin: 0 auto;
 	width: 100%;
 	padding-top: 4rem;
+	padding-bottom: 6rem;
 	margin-bottom: 152px;
 	/* background-color: blue;	 */
 }
