--- a/src/app/shop/result/result.component.scss
+++ b/src/app/shop/result/result.component.scss
@@ -1,10 +1,19 @@
 .result-grid {
 	margin-left: 5vw;
 	display: grid;
-	/* grid-template-columns: repeat(3, 1fr); */
+	 grid-template-columns: repeat(3, 1fr); 
 	/* grid-template-columns: repeat(auto-fit, minmax(100px, 1fr)); */
 	grid-auto-flow: row-dense;
 	grid-gap: 30px 30px;
+}
+.result-grid__item-block {
+	border-radius: 5px;
+	border: 2px solid black;
+	-webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
+}
+.result-grid__item-block:hover {
+	border: 2px solid #a2071e;
 }
 .item-block__cart-add {
 	color: #a2071e;
