few search changes

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -23,12 +23,14 @@
 					<a routerLink="/sign-in" routerLinkActive="active" class="profile-panel__link">Sign In</a>
 				</li>
 				<li class="profile-panel__list-item">
-					<a href="" class="list-item__link-icon">
-						<i class="material-icons link-icon__cart">shopping_cart</i>
-					</a>
-					<a href="" class="profile-panel__link">
-						{{currentPrice}} $
-					</a>
+					<div class="list-item">
+						<a href="" class="list-item__link-icon">
+							<i class="material-icons link-icon__cart">shopping_cart</i>
+						</a>
+						<a href="" class="profile-panel__link">
+							{{currentPrice}} $
+						</a>
+					</div>
 				</li>
 			</ul>
 		</div>
