--- a/src/app/shop/item-detail/item-detail.component.html
+++ b/src/app/shop/item-detail/item-detail.component.html
@@ -1,4 +1,4 @@
-<div class="detail-window">
+<div *ngIf="currentItem" class="detail-window">
 	<div class="detail-window__close-button">
 		<i class="material-icons close-button" (click)="goBack()">close</i>
 	</div>
