--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -4,7 +4,7 @@
   	top: 0;
 }
 .stickyPadding {
-	padding-top: 83px;
+	padding-top: 96px;
 }
 .background__navigation {
 	background-color: #fff;
@@ -17,7 +17,7 @@
 	display: flex;
 	align-items: center;
 	padding-left: 0;
-	margin: 1.5rem 0;
+	margin: 1.75rem 0;
 	margin-top: 2rem;
 }
 .profile-panel {
@@ -55,6 +55,7 @@
 	max-width: 1080px;
 	margin: 0 auto;
 	width: 100%;
+	align-items: center;
 }
 .navigation-container__menu-panel {
 	text-align: center;
@@ -87,5 +88,9 @@
 	color: #a2071e;
 	padding-right: 0.2rem;
 	text-align: center;
-	font-size: 20px;
+	font-size: 32px;
+}
+.list-item {
+	display: flex; 
+	align-items: center;
 }
