--- a/src/app/shop/result/result.component.html
+++ b/src/app/shop/result/result.component.html
@@ -9,4 +9,8 @@
 		</div>
 	</div>
 </div>
+<div class="no-result" *ngIf="noResult">
+	<h2 class="no-result__header">Ops!</h2>
+	<p class="no-result__text">Nothing found, try another query.</p>
+</div>
 <router-outlet></router-outlet>
