--- a/src/app/shop/result/result.component.scss
+++ b/src/app/shop/result/result.component.scss
@@ -18,3 +18,19 @@
 .item-block__cart-add {
 	color: #a2071e;
 }
+.no-result {
+	padding-top: 2rem;
+	margin-left: auto;
+	margin-right: auto;
+}
+.no-result__header {
+	font-family: 'Montserrat', sans-serif;
+	font-size: 30px;
+	text-align: center;
+	color: #a2071e;
+}
+.no-result__text {
+	font-family: 'Open Sans', sans-serif;
+	text-align: center;
+	font-size: 20px;
+}
