new search methods for cart list

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -40,6 +40,7 @@
 	color: #000;
 	font-size: 20px;
 	font-family: 'Open Sans', sans-serif;
+	border-bottom: 4px solid transparent;
 	-webkit-transition-duration: 0.2s;
     transition-duration: 0.2s;
 }
