--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -27,7 +27,7 @@
 						<a href="" class="list-item__link-icon">
 							<i class="material-icons link-icon__cart">shopping_cart</i>
 						</a>
-						<a href="" class="profile-panel__link">
+						<a href="" class="profile-panel__link link--price">
 							{{currentPrice}} $
 						</a>
 					</div>
