--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -35,6 +35,7 @@
 	font-family: 'Open Sans', sans-serif;
 	-webkit-transition-duration: 0.2s;
     transition-duration: 0.2s;
+    border-bottom: 4px solid transparent;
 }
 .menu-panel__list-item {
 	padding-right: 3rem;
@@ -77,10 +78,12 @@
 	color: #a2071e;
 	font-size: 45px;
 	grid-area: home;
+	border-bottom: 4px solid transparent;
 	-webkit-transition-duration: 0.2s;
     transition-duration: 0.2s;
 }
 .home__icon:hover {
+	color: #000;
 	border-bottom: 4px solid #a2071e;
 }
 .link-icon__cart {
@@ -89,8 +92,18 @@
 	padding-right: 0.2rem;
 	text-align: center;
 	font-size: 32px;
+	border-bottom: 4px solid transparent;
+	-webkit-transition-duration: 0.2s;
+    transition-duration: 0.2s;
+}
+.link-icon__cart:hover {
+	color: #000;
+	border-bottom: 4px solid #a2071e;		
 }
 .list-item {
 	display: flex; 
 	align-items: center;
+}
+.link--price {
+	padding-top: 4px;
 }
