--- a/src/app/shop/result/result.component.scss
+++ b/src/app/shop/result/result.component.scss
@@ -1,16 +1,18 @@
 .result-grid {
 	margin-left: 5vw;
+	margin-right: 5vw;
 	display: grid;
-	 grid-template-columns: repeat(3, 1fr); 
+	  grid-template-columns: repeat(3, 1fr);  
+	 /* grid-template-columns: repeat(auto-fill, minmax(1fr, 300px));  */
 	/* grid-template-columns: repeat(auto-fit, minmax(100px, 1fr)); */
-	grid-auto-flow: row-dense;
 	grid-gap: 30px 30px;
 }
 .result-grid__item-block {
-	border-radius: 5px;
-	border: 2px solid black;
+	box-shadow: 0 0 10px rgba(0,0,0,0.5);
+	border: 2px solid transparent;
 	-webkit-transition-duration: 0.4s;
     transition-duration: 0.4s;
+    border-radius: 0 0 4px 4px;
 }
 .result-grid__item-block:hover {
 	border: 2px solid #a2071e;
@@ -33,4 +35,23 @@
 	font-family: 'Open Sans', sans-serif;
 	text-align: center;
 	font-size: 20px;
+}
+.item-block__image {
+	max-height: 300px;
+	height: 100%;
+	width: auto;
+}
+.result-grid {
+	max-width: 300px;
+	width: 100%;
+}
+.item-block__tag-part {
+	display: flex; 
+	justify-content: space-between;
+	padding-left: 1rem;
+	padding-right: 1rem;
+}
+.tag-part__name,
+.tag-part__price {
+	font-family: 'Open Sans', sans-serif;
 }
