--- a/src/app/sign/registration-page/registration-page.component.html
+++ b/src/app/sign/registration-page/registration-page.component.html
@@ -1,7 +1,12 @@
-	<form>
-  		<input type="text" name="login">
-  		<input type="password" name="pass">
-  		<input type="password" name="passConfirm">
-  		<button type="submit">Submit</button>
+<div class="registration-block">
+	<form class="registration-block__reg-form">
+		<label for="login" class="reg-form__label">Login</label><br>
+  		<input type="text" name="login" class="reg-form__input"><br>
+  		<label for="pass" class="reg-form__label">Password</label><br>
+  		<input type="password" name="pass" class="reg-form__input"><br>
+  		<label for="passConfirm" class="reg-form__label">Password Confirm</label><br>
+  		<input type="password" name="passConfirm" class="reg-form__input"><br>
+  		<!-- <button type="submit" class="reg-form__button">Confirm</button> -->
   	</form>
-<a routerLink="/sign-in" routerLinkActive="active">Back</a>
+<a routerLink="/sign-in" routerLinkActive="active" class="registration-block__link">Back</a>
+</div>	
