--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -25,7 +25,7 @@
 				<li class="profile-panel__list-item">
 					<div class="list-item">
 							<i class="material-icons link-icon__cart" (click)="showList()">shopping_cart</i>
-						<a href="" class="profile-panel__link link--price">
+						<a class="profile-panel__link link--price" (click)="showList()">
 							{{currentPrice}} $
 						</a>
 					</div>
@@ -47,6 +47,7 @@
 					</div>
 				</li>
 			</ul>
+			 <p class="cart-list__total">Total: {{currentPrice}} $</p>
 			<div class="cart-list__bottom">
 				<p class="bottom__confirm">CONFIRM</p>
 			</div>
