--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -133,6 +133,8 @@
 	display: block; 
 	margin-top: auto; 
 	margin-bottom: auto;
+	padding-right: 1rem;
+	padding-left: 1rem;
 }
 .item__info-block {
 	display: flex;
@@ -157,7 +159,6 @@
 .item-control__price {
 	font-family: 'Open Sans', sans-serif;
 	font-size: 18px;
-	padding-right: 1.5rem;
 }
 .cart-list__bottom {
 	background-color: #a2071e;	
@@ -172,4 +173,11 @@
 	color: #fff;
 	margin: 0;
 	padding: 0.5rem 0;
+}
+.cart-list__total {
+	display: flex;
+	justify-content: flex-end;
+	font-size: 20px;
+	font-family: 'Open Sans', sans-serif;
+	padding-right: 5rem;
 }
