--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -25,24 +25,21 @@
 				<li class="profile-panel__list-item">
 					<div class="list-item">
 							<i class="material-icons link-icon__cart" (click)="showList()">shopping_cart</i>
-						<a class="profile-panel__link link--price" (click)="showList()">
-							{{currentPrice}} $
-						</a>
 					</div>
 				</li>
 			</ul>
 		</div>
 			<div class="navigation__cart-list" *ngIf='show'>
 			<ul class="cart-list" >
-				<li *ngFor='let item of currentShoppingList' class="cart-list__item">
-					<div class="item__info-block">
+				<li *ngFor='let item of currentShoppingList; let i = index' class="cart-list__item">
+					<div class="item__info-block" *ngIf='item.name'>
 						<div class="info-block__name">
 							<p class="name__text">{{item.name}}</p>
 						</div>
 						<div class="info-block__item-control">
 							<p class="item-control__amount">x{{item.amount}}</p>
 							<p class="item-control__price">Price: {{item.amount*item.price}} $</p>
-							<i class="material-icons item-control__item-delete" (click)="deleteElement(item.id)">close</i>
+							<i class="material-icons item-control__item-delete" (click)="deleteElement(item.id, i)">close</i>
 						</div>
 					</div>
 				</li>
