--- a/src/app/shop/item-detail/item-detail.component.html
+++ b/src/app/shop/item-detail/item-detail.component.html
@@ -3,19 +3,24 @@
 		<i class="material-icons close-button" (click)="goBack()">close</i>
 	</div>
 	<div class="detail-window__content-block">
-		<p>id: {{currentItem.id}}</p>
-		<p>name: {{currentItem.name}}</p>
-  		<p>type: {{currentItem.type}}</p>
-		<p>amount: {{currentItem.amount}}</p>
-		<p>price: {{currentItem.price}}</p>
-		<div style="display: flex; justify-content: flex-end;">
-			<p>Add to Cart </p>
-			<i class="material-icons item-block__cart-add" (click)="toCard(currentItem)" style="margin-top: auto; margin-bottom: auto;">add</i>
-		</div>
-		<div>
-			<button (click)="decrement()">-</button>
-			<p>{{counter}}</p>
-			<button (click)="increment()">+</button>
+		<div class="content-block">
+			<div class="content-block__text">
+				<p class="text__detail-text">{{currentItem.name}}</p>
+  				<p class="text__detail-text detail-text--type">Type: {{currentItem.type}}</p>
+				<p class="text__detail-text detail-text--price">Price: {{currentItem.price*counter}} $</p>
+				<div class="content-block__amount-control">
+					<button (click)="decrement()" class="amount-control__button">-</button>
+					<p class="amount-control__counter">{{counter}}</p>
+					<button (click)="increment()" class="amount-control__button">+</button>
+				</div>
+				<div class="content-block__add">
+					<button (click)="toCard(currentItem)" class="add__button">Add</button>
+				</div>
+				<p class="text__alert-message" *ngIf="alertMessage">Out of Stock</p>
+			</div>
+			<div class="content-block__image">
+				<img src="./../../../assets/beer-image.png" class="image__detail-image">
+			</div>
 		</div>
 	</div>
 </div>
