--- a/src/app/shop/result/result.component.html
+++ b/src/app/shop/result/result.component.html
@@ -3,7 +3,7 @@
 		<img src="./../../assets/beer-image.png" class="item-block__image">
 		<div class="item-block__tag-part">
 			<p class="tag-part__name">{{item.name}}</p>
-			<p class="tag-part__price">Price: {{item.price}} $</p>
+			<p class="tag-part__price">Price: {{toFloat(item.price)}} $</p>
 		</div>
 	</div>
 </div>
