--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -34,17 +34,17 @@
 				<li *ngFor='let item of currentShoppingList; let i = index' class="cart-list__item">
 					<div class="item__info-block" *ngIf='item.name'>
 						<div class="info-block__name">
-							<p class="name__text">{{item.name}}</p>
+							<p class="name__text">{{item.name}} x{{item.amount}}</p>
+							<!-- <p class="name__amount"></p> -->
 						</div>
-						<div class="info-block__item-control">
-							<p class="item-control__amount">x{{item.amount}}</p>
-							<p class="item-control__price">Price: {{item.amount*item.price}} $</p>
+						<div class="info-block__item-control">					
+							<p class="item-control__price">Price: {{toFloat(item.amount*item.price)}} $</p>
 							<i class="material-icons item-control__item-delete" (click)="deleteElement(item.id, i)">close</i>
 						</div>
 					</div>
 				</li>
 			</ul>
-			 <p class="cart-list__total">Total: {{currentPrice}} $</p>
+			 <p class="cart-list__total">Total: {{toFloat(currentPrice)}} $</p>
 			<div class="cart-list__bottom">
 				<p class="bottom__confirm">CONFIRM</p>
 			</div>
