page for confirm added

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -46,7 +46,7 @@
 			</ul>
 			 <p class="cart-list__total">Total: {{toFloat(currentPrice)}} $</p>
 			<div class="cart-list__bottom">
-				<p class="bottom__confirm">CONFIRM</p>
+				<p class="bottom__confirm" (click)="orderConfirm()">CONFIRM</p>
 			</div>
 		</div>
 	</div>
