--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -43,7 +43,8 @@
 .profile-panel__list-item {
 	padding-left: 1.5rem;
 }
-.menu-panel__link:hover {
+.menu-panel__link:hover,
+.profile-panel__link:hover {
 	border-bottom: 4px solid #a2071e;	
 }
 .navigation__navigation-container {
