--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -39,7 +39,7 @@
 						</div>
 						<div class="info-block__item-control">					
 							<p class="item-control__price">Price: {{floatMeth.toFloat(item.amount*item.price)}} $</p>
-							<i class="material-icons item-control__item-delete" (click)="deleteElement(item.id, i)">close</i>
+							<i class="material-icons item-control__item-delete" (click)="deleteElement(item.id, item.product, i)">close</i>
 						</div>
 					</div>
 				</li>
