--- a/src/app/sign/sign-page/sign-page.component.html
+++ b/src/app/sign/sign-page/sign-page.component.html
@@ -8,12 +8,12 @@
 		<a routerLink="/registration" routerLinkActive="active" class="registration-block__reg-link">Create New Account</a>
 	</div>
 	<div class="sign__auth-block">
-		<form class="auth-block__form">
+		<form novalidate [formGroup]="loginForm" (ngSubmit)="onLogin(loginForm)" class="auth-block__form">
 			<label for="login" class="form__label">Login</label><br>
-  			<input type="text" name="login" class="form__input"><br>
+  			<input type="text" formControlName="login" placeholder='Login Goes Here' class="form__input"><br>
   			<label for="password" class="form__label">Password</label><br>
-  			<input type="password" name="pass" class="form__input"><br>
-  			<!-- <button type="submit" class="form__button">Submit</button> -->
+  			<input type="password" formControlName="pass" class="form__input"><br>
+  			<button type="submit" class="form__button">Sign in</button>
   		</form>
   	</div>
   </div>
