--- a/src/app/sign/sign-page/sign-page.component.scss
+++ b/src/app/sign/sign-page/sign-page.component.scss
@@ -48,16 +48,34 @@
 .form__input {
 	font-family: 'Open Sans', sans-serif;
 	font-size: 18px;
+
 	outline: none;
 	margin-top: 0.5rem;
 	margin-bottom: 1rem;
 	border: 2px solid transparent;
 	border-bottom: 2px solid #a2071e;
 }
+.form__input::placeholder {
+	font-style: italic;	
+}
 .form__input:focus {
 	border-bottom: 2px solid #000;
 }
 .form__button {
+	display: block;
 	margin-left: auto;
 	margin-right: auto;
+	margin-top: 2rem;
+	background-color: #fff;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 18px;
+	border: 2px solid #a2071e;
+	border-radius: 3px;
+	padding: 5px 25px;
+	outline: none;
+	-webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
+}
+.form__button:hover {
+	border: 2px solid #000;
 }
