--- a/src/app/sign/registration-page/registration-page.component.html
+++ b/src/app/sign/registration-page/registration-page.component.html
@@ -6,7 +6,7 @@
   		<input type="password" formControlName="pass" class="reg-form__input"><br>
   		<label for="passConfirm" class="reg-form__label">Password Confirm</label><br>
   		<input type="password" formControlName="passConfirm" class="reg-form__input"><br>
-  		<!-- <button type="submit" class="reg-form__button">Confirm</button> -->
+  		<button type="submit" class="reg-form__button">Confirm</button>
   	</form>
 <a routerLink="/sign-in" routerLinkActive="active" class="registration-block__link">Back</a>
 </div>	
