--- a/src/app/sign/registration-page/registration-page.component.scss
+++ b/src/app/sign/registration-page/registration-page.component.scss
@@ -30,11 +30,19 @@
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
+	margin-top: 2rem;
 	background-color: #fff;
-	border-radius: 2px;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 18px;
+	border: 2px solid #a2071e;
+	border-radius: 3px;
+	padding: 5px 25px;
+	outline: none;
+	-webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
+}
+.reg-form__button:hover {
 	border: 2px solid #000;
-	height: 30px;
-	width: 80px;
 }
 .registration-block__link {
 	color: #000;
