--- a/src/app/sign/registration-page/registration-page.component.scss
+++ b/src/app/sign/registration-page/registration-page.component.scss
@@ -57,3 +57,13 @@
 	color: #a2071e;
 	border-bottom: 2px solid transparent;
 }
+.alert-window {
+	margin: 2rem 0;
+}
+.alert-window__message {
+	margin: 0;
+	text-align: center;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 18px;
+	color: #a2071e;
+}
