--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -20,8 +20,9 @@
 		<div class="navigation-container__profile-panel">
 			<ul class="profile-panel">
 				<li class="profile-panel__list-item">
-					<a routerLink="/sign-in" *ngIf='!isSign' routerLinkActive="active" class="profile-panel__link">Sign In</a>
-					<a *ngIf='isSign' class="profile-panel__link" (click)="signOut()">Sign Out</a>
+					<p *ngIf='isSign' class="list-item__username">{{isSign}}</p>
+					<a routerLink="/sign-in" *ngIf='!isSign' routerLinkActive="active" class="list-item__link">Sign In</a>
+					<a *ngIf='isSign' class="list-item__link" (click)="signOut()">Sign Out</a>
 				</li>
 				<li class="profile-panel__list-item">
 					<div class="list-item">
