--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -29,7 +29,7 @@
 	display: inline-block;
 }
 .menu-panel__link,
-.profile-panel__link {
+.list-item__link {
 	text-decoration: none;
 	color: #000;
 	font-size: 20px;
@@ -42,10 +42,12 @@
 	padding-right: 3rem;
 }
 .profile-panel__list-item {
+	display: flex;
+	 align-items: center; 
 	padding-left: 1.5rem;
 }
 .menu-panel__link:hover,
-.profile-panel__link:hover {
+.list-item__link:hover {
 	border-bottom: 4px solid #a2071e;	
 }
 .navigation__navigation-container {
@@ -191,4 +193,11 @@
 	font-size: 20px;
 	font-family: 'Open Sans', sans-serif;
 	padding-right: 5rem;
+}
+.list-item__username {
+	font-size: 20px;
+	font-family: 'Open Sans', sans-serif;
+	border-bottom: 4px solid #a2071e;
+	margin: 0;
+	margin-right: 1rem;
 }
