--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -27,6 +27,7 @@
 				<li class="profile-panel__list-item">
 					<div class="list-item">
 							<i class="material-icons link-icon__cart" (click)="showList()">shopping_cart</i>
+							<!-- <p>{{floatMeth.toFloat(currentPrice)}} $</p> -->
 					</div>
 				</li>
 			</ul>
