--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,3 +1,6 @@
+$add-color: #a2071e;
+$font-title: 'Montserrat', sans-serif;
+$font-regular: 'Open Sans', sans-serif;
 .sticky {
 	position: fixed;
 	width: 100%;
@@ -33,7 +36,7 @@
 	text-decoration: none;
 	color: #000;
 	font-size: 20px;
-	font-family: 'Open Sans', sans-serif;
+	font-family: $font-regular;
 	-webkit-transition-duration: 0.2s;
     transition-duration: 0.2s;
     border-bottom: 4px solid transparent;
@@ -48,7 +51,7 @@
 }
 .menu-panel__link:hover,
 .list-item__link:hover {
-	border-bottom: 4px solid #a2071e;	
+	border-bottom: 4px solid $add-color;	
 }
 .navigation__navigation-container {
 	display: grid;
@@ -78,7 +81,7 @@
 	margin-bottom: auto;
 }
 .home__icon {
-	color: #a2071e;
+	color: $add-color;
 	font-size: 45px;
 	grid-area: home;
 	border-bottom: 4px solid transparent;
@@ -87,11 +90,11 @@
 }
 .home__icon:hover {
 	color: #000;
-	border-bottom: 4px solid #a2071e;
+	border-bottom: 4px solid $add-color;
 }
 .link-icon__cart {
 	display: inline-block;
-	color: #a2071e;
+	color: $add-color;
 	padding-right: 0.2rem;
 	text-align: center;
 	font-size: 32px;
@@ -102,7 +105,7 @@
 }
 .link-icon__cart:hover {
 	color: #000;
-	border-bottom: 4px solid #a2071e;		
+	border-bottom: 4px solid $add-color;		
 }
 .list-item {
 	display: flex; 
@@ -113,7 +116,7 @@
 	padding-top: 4px;
 }
 .active {
-	border-bottom: 4px solid #a2071e;
+	border-bottom: 4px solid $add-color;
 }
 .navigation__cart-list {
 	border-radius: 0 0 0 5px;
@@ -145,7 +148,7 @@
     transition-duration: 0.2s;
 }
 .item-control__item-delete:hover {
-	color: #a2071e;
+	color: $add-color;
 }
 .item__info-block {
 	display: flex;
@@ -158,7 +161,7 @@
 	display: flex;
 }
 .name__text {
-	font-family: 'Open Sans', sans-serif;
+	font-family: $font-regular;
 	font-size: 18px;
 	padding-left: 1rem;
 	padding-right: 0.3rem;
@@ -169,11 +172,11 @@
 	padding-right: 10rem;
 } */
 .item-control__price {
-	font-family: 'Open Sans', sans-serif;
+	font-family: $font-regular;
 	font-size: 18px;
 }
 .cart-list__bottom {
-	background-color: #a2071e;	
+	background-color: $add-color;	
 }
 .cart-list__bottom {
 	border-radius: 0 0 0 5px;
@@ -181,7 +184,7 @@
 }
 .bottom__confirm {
 	font-size: 20px;
-	font-family: 'Montserrat', sans-serif;
+	font-family: $font-title;
 	color: #fff;
 	margin: 0;
 	padding: 0.5rem 0;
@@ -191,13 +194,13 @@
 	display: flex;
 	justify-content: flex-end;
 	font-size: 20px;
-	font-family: 'Open Sans', sans-serif;
+	font-family: $font-regular;
 	padding-right: 5rem;
 }
 .list-item__username {
 	font-size: 20px;
-	font-family: 'Open Sans', sans-serif;
-	border-bottom: 4px solid #a2071e;
+	font-family: $font-regular;
+	border-bottom: 4px solid $add-color;
 	margin: 0;
 	margin-right: 1rem;
 }
