--- a/src/app/shop/search/search.component.scss
+++ b/src/app/shop/search/search.component.scss
@@ -1,4 +1,6 @@
-/* style="margin-left: 5vw;" */
+$add-color: #a2071e;
+$font-title: 'Montserrat', sans-serif;
+$font-regular: 'Open Sans', sans-serif;
 .form__search-form {
 	display: flex;
 	margin-bottom: 3.5rem;
@@ -12,7 +14,7 @@
 .category__control,
 .search-field__control {
 	margin-top: 8px;
-	font-family: 'Open Sans', sans-serif;
+	font-family: $font-regular;
 	font-size: 18px;
 	border-radius: 2px;
 }
@@ -24,7 +26,7 @@
 	height: 26px;
 }
 .search-field__control::placeholder {
-	font-family: 'Open Sans', sans-serif;
+	font-family: $font-regular;
 	font-style: italic;
 }
 .category__control {
@@ -37,16 +39,16 @@
 }
 .category__label,
 .search-field__label {
-	font-family: 'Open Sans', sans-serif;
+	font-family: $font-regular;
 	font-size: 20px;
 	padding-left: 0.5rem;
 	color: #000;
 }
 .search-field__button {
-	font-family: 'Open Sans', sans-serif;
+	font-family: $font-regular;
 	font-size: 20px;
 	background-color: #fff;
-	border: 2px solid #a2071e;
+	border: 2px solid $add-color;
 	border-radius: 2px;
 	height: 36.38px;
 	-webkit-transition-duration: 0.4s;
@@ -60,5 +62,5 @@
 }
 .search-field__control:focus,
 .category__control:focus {
-	border: 1px solid #a2071e;
+	border: 1px solid $add-color;
 }
