--- a/src/app/sign/registration-page/registration-page.component.scss
+++ b/src/app/sign/registration-page/registration-page.component.scss
@@ -1,3 +1,6 @@
+$add-color: #a2071e;
+$font-title: 'Montserrat', sans-serif;
+$font-regular: 'Open Sans', sans-serif;
 .registration-block {
 	display: flex;
 	flex-direction: column;
@@ -11,16 +14,16 @@
 }
 .reg-form__label {
 	font-size: 18px;
-	font-family: 'Open Sans', sans-serif;
+	font-family: $font-regular;
 }
 .reg-form__input {
-	font-family: 'Open Sans', sans-serif;
+	font-family: $font-regular;
 	font-size: 18px;
 	outline: none;
 	margin-top: 0.5rem;
 	margin-bottom: 1rem;
 	border: 2px solid transparent;
-	border-bottom: 2px solid #a2071e;
+	border-bottom: 2px solid $add-color;
 	width: 250px;
 }
 .reg-form__input:focus {
@@ -32,9 +35,9 @@
 	margin-right: auto;
 	margin-top: 2rem;
 	background-color: #fff;
-	font-family: 'Open Sans', sans-serif;
+	font-family: $font-regular;
 	font-size: 18px;
-	border: 2px solid #a2071e;
+	border: 2px solid $add-color;
 	border-radius: 3px;
 	padding: 5px 25px;
 	outline: none;
@@ -46,15 +49,15 @@
 }
 .registration-block__link {
 	color: #000;
-	border-bottom: 2px solid #a2071e;
+	border-bottom: 2px solid $add-color;
 	text-decoration: none;
-	font-family: 'Open Sans', sans-serif;
+	font-family: $font-regular;
 	font-size: 18px;
 	-webkit-transition-duration: 0.4s;
     transition-duration: 0.4s;
 }
 .registration-block__link:hover {
-	color: #a2071e;
+	color: $add-color;
 	border-bottom: 2px solid transparent;
 }
 .alert-window {
@@ -63,7 +66,7 @@
 .alert-window__message {
 	margin: 0;
 	text-align: center;
-	font-family: 'Open Sans', sans-serif;
+	font-family: $font-regular;
 	font-size: 18px;
-	color: #a2071e;
+	color: $add-color;
 }
