--- a/src/app/sign/sign-page/sign-page.component.scss
+++ b/src/app/sign/sign-page/sign-page.component.scss
@@ -1,3 +1,6 @@
+$add-color: #a2071e;
+$font-title: 'Montserrat', sans-serif;
+$font-regular: 'Open Sans', sans-serif;
 .sign {
 	margin-top: 15vh;
 	display: grid;
@@ -12,48 +15,48 @@
 .sign__registration-block {
 	/* display: flex; */
 	text-align: center;
-	border-right: 2px solid #a2071e;
+	border-right: 2px solid $add-color;
 }
 .registration-block__title {
-	font-family: 'Montserrat', sans-serif;
-	color: #a2071e;
+	font-family: $font-title;
+	color: $add-color;
 	font-size: 30px;
 	margin-top: 0;
 }
 .registration-block__text {
 	margin-left: auto;
 	margin-right: auto;
-	font-family: 'Open Sans', sans-serif;
+	font-family: $font-regular;
 	font-size: 18px;
 	width: 70%;
 }
 .registration-block__reg-link {
 	color: #000;
-	border-bottom: 2px solid #a2071e;
+	border-bottom: 2px solid $add-color;
 	text-decoration: none;
-	font-family: 'Open Sans', sans-serif;
+	font-family: $font-regular;
 	font-size: 18px;
 	-webkit-transition-duration: 0.4s;
     transition-duration: 0.4s;
 }
 .registration-block__reg-link:hover {
-	color: #a2071e;
+	color: $add-color;
 	border-bottom: 2px solid transparent;
 }
 .form__label {
 	padding-left: 1rem;
 	font-size: 18px;
-	font-family: 'Open Sans', sans-serif;
+	font-family: $font-regular;
 }
 .form__input {
-	font-family: 'Open Sans', sans-serif;
+	font-family: $font-regular;
 	font-size: 18px;
 
 	outline: none;
 	margin-top: 0.5rem;
 	margin-bottom: 1rem;
 	border: 2px solid transparent;
-	border-bottom: 2px solid #a2071e;
+	border-bottom: 2px solid $add-color;
 }
 .form__input::placeholder {
 	font-style: italic;	
@@ -67,9 +70,9 @@
 	margin-right: auto;
 	margin-top: 2rem;
 	background-color: #fff;
-	font-family: 'Open Sans', sans-serif;
+	font-family: $font-regular;
 	font-size: 18px;
-	border: 2px solid #a2071e;
+	border: 2px solid $add-color;
 	border-radius: 3px;
 	padding: 5px 25px;
 	outline: none;
@@ -85,7 +88,7 @@
 .alert-window__message {
 	margin: 0;
 	text-align: center;
-	font-family: 'Open Sans', sans-serif;
+	font-family: $font-regular;
 	font-size: 18px;
-	color: #a2071e;
+	color: $add-color;
 }
