second name fixed

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -15,7 +15,7 @@
 		</div>
 		<div class="footer-container__text-part">
 			<p class="text-part__developer">
-				<span class="developer__part">Deved by</span>: Aliaksei Shakhoryn<br>
+				<span class="developer__part">Deved by</span>: Aliaksei Shakhtoryn<br>
 			</p>
 			<a href="https://github.com/bakeroner" class="text-part__git">GitHub</a>
 		</div>
